[build-system]
requires = ["setuptools >= 67.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["sdh.table3"]

[project]
name = "sdh.table3"
description = "Table rendering engine"
version = "2.1.1"
dependencies = [
  "Django>=3.2"
]
requires-python = ">= 3.8"
license = {file = 'LICENSE'}

authors = [
    {name = "Viacheslav Vic Bukhantsov", email = "vic.bukhantsov@gmail.com"},
    {name = "Oleg Koziy"},
    {name = "Andiy Koziy", email="andriy@koziy.com"},
    {name = "Alexey Babarykin", email="mobil.light@gmail.com"},
    {name = "Alex V. Koval", email="alex@ua2web.com"},
    {name = "Alexander Tsiskovsky aka Lextor", email="lextor.alex@gmail.com"}
]

maintainers = [
  {name = "Viacheslav Vic Bukhantsov", email = "vic.bukhantsov@gmail.com"}
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
Repository = "https://github.com/sdh-global/sdh-table3"
